--- a/trunk/ModelFarowl/nbproject/project.properties
+++ b/trunk/ModelFarowl/nbproject/project.properties
@@ -27,14 +27,18 @@ dist.jar=${dist.dir}/ModelFarowl.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javax.mail.jar=C:\\Users\\Lucas\\Documents\\javax.mail.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=F:\\Banco de Dados\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.junit_4.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${libs.JavaMail.classpath}:\
+    ${libs.MySql.classpath}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
